Persistence microservice added

--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -4,8 +4,11 @@
     <script>
 	window.onload = function(){
 		bot = document.getElementById('bot');
+		bot_g = document.getElementById('bot_g');
 		input = document.getElementById('in');
 		output = document.getElementById('out');
+		output_2 = document.getElementById('name_bd');
+		output_3 = document.getElementById('id_bd');
 		bot.onclick = function(){
 		    //read input:
 		    str_in = input.value;
@@ -18,7 +21,12 @@
 			        cripto_ajax(data.lowercase_str);
 			   }
 			}); //Ajax
-		} //button click
+		} //button cripto click
+
+		bot_g.onclick = function(){
+			str_cripto = output.value;
+			persistence_ajax(str_cripto);
+		}// button gravar click
 
 		function cripto_ajax(str_data){
 		    $.ajax({
@@ -32,6 +40,19 @@
 			});
 		} //cripto ajax
 
+		function persistence_ajax(str_data){
+		    $.ajax({
+			  url: 'http://150.163.17.14:5002/api_gateway/persistence?str_input='+str_data,
+			  dataType: 'json',
+			  crossOrigin: true,
+			  success: function(data){
+			        output_2.value = data.nome;
+			        output_3.value = data.id;
+			  }
+			});
+		} //persistence ajax
+
+
 	}//onload
 
     </script>
@@ -39,8 +60,12 @@
 <body>
 <form>
     String de entrada <input id=in name="str_input"/><br/>
-    String de Saída: <input id="out"/><br/>
-    <button type="button" id="bot">Processar</button>
+    String criptografada <input id="out" name="user_name"/><br/>
+	Usuário no banco <input id="name_bd" name="user_name_bd"/><br/>
+	Id do usuário <input id="id_bd" name="user_id_bd"/><br/>
+	
+    <button type="button" id="bot">Criptografar</button>
+	<button type="button" id="bot_g">Gravar</button>
 </form>
 </body>
 </html>
